--- a/css/style.css
+++ b/css/style.css
@@ -115,29 +115,78 @@ html{
 }
 
 /* Services Section */
-#services{
+
+/*  logos -> logo-container  logos-slide -> logo-container-slide */
+#services {
     margin: 34px;
-    display: flex;
-}
-#services .box{ 
+    margin-left: 0;
+    /* display: flex; */
+  }
+  
+  /* first-box changed */
+  #services #first-box {
+    margin-left: 0;
+  }
+  
+  /* last changed */
+  #services #last-box {
+    /* margin-right: 0;*/
+    margin-right: 25px;
+  }
+  
+  #services .box {
+    /* changed */
     border: 2px solid brown;
     padding: 34px;
-    margin: 2px 55px;
+    margin: 2px 25px;
     border-radius: 28px;
     background: #f2f2f2;
     margin-bottom: 20px;
-}
-
-#services .box img{ 
-   height: 160px;
-   margin: auto;
-   display: block;
-}
-
-#services .box p{
+    width: 350px;
+    height: 520px;
+  }
+  
+  #services .box img {
+    height: 160px;
+    margin: auto;
+    display: block;
+  }
+  
+  #services .box p {
     font-family: 'Bree Serif', serif;
+    white-space: normal;
+  }
 
-} 
+
+  @keyframes slide {
+
+
+    from {
+      transform: translateX(0);
+    }
+  
+    to {
+      transform: translateX(-100%);
+    }
+  }
+  
+  .logo-container {
+    white-space: nowrap;
+  
+    overflow: hidden;
+  }
+  
+  .logo-container-slide {
+    display: inline-block;
+    animation: 40s slide infinite linear;
+  }
+  
+  .hori-box {
+    display: flex;
+  }
+  
+  
+
 
 /* Clients Section */
 #client-section{ 
